# remoteStorage

./: README.md  pyproject.toml  remoteStorage.db
remotestorage/: db.py  operations.py  webapp.py
remotestoragejs/: index.html  remotestorage.js  remotestoragedeno.js  test.js
tests/: test_model.py
